--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>Timeline | groups | Groups ordering</title>
+  <title>History Timeline | Sushil Shinde</title>
 
   <style>
     body, html {
